Added favicon, and fixed the flex issue with illustration and hero text

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Clubly🏫</title>
+  <title>Beacon- Find the best student organisations on campuses</title>
   <link rel="stylesheet" href="index.css" />
+  <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 
